# lichtenstein-lib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  library.h
client/: CMakeLists.txt  Client.cpp  Client.h  IClientDataStore.h  RealtimeClient.cpp  RealtimeClient.h  version.c  version.cpp.in  version.h
client/api/: API.cpp  API.h  APIHandler.cpp  APIHandler.h  ClientHandler.cpp  ClientHandler.h  HandlerFactory.cpp  HandlerFactory.h  IRequestHandler.h  MessageSerializer.cpp  MessageSerializer.h  ProtocolError.h  SerializationError.h
client/api/handlers/: AdoptRequest.cpp  AdoptRequest.h  GetInfoReq.cpp  GetInfoReq.h
client/helpers/: HmacChallengeHandler.cpp  HmacChallengeHandler.h
client/io/: DTLSClient.cpp  DTLSClient.h  DTLSServer.cpp  DTLSServer.h  GenericServerClient.cpp  GenericServerClient.h  GenericTLSClient.cpp  GenericTLSClient.h  GenericTLSServer.cpp  GenericTLSServer.h  OpenSSLError.cpp  OpenSSLError.h  SSLSessionClosedError.h  TLSClient.cpp  TLSClient.h  TLSServer.cpp  TLSServer.h
client/mdns/: AppleService.cpp  AppleService.h  Service.h
io/: CMakeLists.txt  GenericServerClient.cpp  GenericServerClient.h  GenericTLSClient.cpp  GenericTLSClient.h  GenericTLSServer.h  OpenSSLError.h  README.md  TLSServer.cpp  TLSServer.h
io/mdns/: AppleBrowser.cpp  AppleBrowser.h  AppleBrowserService.cpp  AppleBrowserService.h  AppleService.cpp  AppleService.h  Browser.cpp  Browser.h  IBrowserService.h  Service.cpp  Service.h
protocol/: CMakeLists.txt  GenericClientHandler.cpp  GenericClientHandler.h  HmacChallengeHandler.cpp  HmacChallengeHandler.h  MessageIO.cpp  MessageIO.h  MessageSerializer.cpp  MessageSerializer.h  README.md  WireMessage.h  version.c  version.cpp  version.h
protocol/proto/: CMakeLists.txt
protocol/proto/client/: AdoptAck.proto  AdoptRequest.proto  AdoptionStatus.proto  CMakeLists.txt  GetInfo.proto  GetInfoResponse.proto  NodeInfo.proto  PerformanceInfo.proto  RespStatus.proto
protocol/proto/rt/: CMakeLists.txt  ChannelData.proto  ChannelDataAck.proto  ChannelDescriptor.proto  JoinChannel.proto  JoinChannelAck.proto  LeaveChannel.proto  LeaveChannelAck.proto  MulticastOutputReq.proto  README.md
protocol/proto/server/: CMakeLists.txt  README.md  ReqPing.proto  RespPong.proto
protocol/proto/shared/: AuthChallenge.proto  AuthHello.proto  AuthResponse.proto  AuthState.proto  AuthToken.proto  CMakeLists.txt  Error.proto  HmacAuthChallenge.proto  HmacAuthResponse.proto  Message.proto  README.md
tests/: BrowserTest.cpp  CMakeLists.txt  client_test.cpp  dtls_client.cpp  dtls_server.cpp  tests.cpp  tls_client.cpp  tls_server.cpp
tests/client/: BasicFileDataStore.cpp  BasicFileDataStore.h  CMakeLists.txt  client.cpp
